tdf#109537: treat Temporary Internet Files as temp directory

... on Windows. Also, when testing against ordinary temp directory,
use system path, not LibreOffice temp directory (thanks to Aron Budea).

Change-Id: I52ecddc65097d6d64ec45e882cce8f1e7006794d